--- a/index.html
+++ b/index.html
@@ -8,29 +8,75 @@
 </head>
 <body>
     <!-- HEADER -->
-    <div class="header">
+    <header>
+        <div class="header-one">
+            <h3 class="header-logo"> Header Logo/h3>
+            <ul class="header-links">
+                <li><a href="">Header Link One</a></li>
+                <li><a href="">Header Link One</a></li>
+                <li><a href="">Header Link One</a></li>
+            </ul>
+        </div>
+        <div class="header-two">
+            <div class="header-content1">
+                <h2>This website is awesome</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi officia sed aspernatur blanditiis aliquid amet recusandae ipsum accusamus dignissimos maiores.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="header-content2">
+                <div class="dm-block">Block instead of img</div>
+            </div>
+        </div>
+    </header>
+    
+    <main>
+        <!-- CONTENT 1 -->
+        <section class="section-one">
+            <h2>Some random</h2>
+            <div class="containers">
+                <div class="container1">
+                    <div class="block"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
+                </div>
+                <div class="container2">
+                    <div class="block"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
+                </div>
+                <div class="container3">
+                    <div class="block"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
+                </div>
+                <div class="container4">
+                    <div class="block"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
+                </div>
+            </div>
+        </section>
 
-    </div>
+        <!-- CONTENT 2 -->
+        <section class="section-two">
+            <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquid, non, molestiae perferendis quas nemo, placeat eius maiores quibusdam doloremque veniam facilis officia consequatur beatae earum minus quidem explicabo officiis.</p>
+            <p class="author"></p>
+        </section>
 
-    <!-- CONTENT 1 -->
-    <div class="content-one">
+        <!-- CONTENT 3 -->
+        <section class="section-three">
+            <div class="bottom-container">
+                <div class="bt-container1">
+                    <h3>Call to action It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there</p>
+                </div>
+                <div class="bt-container2">
+                    <button>Sign up</button>
+                </div>
+            </div>
 
-    </div>
-
-    <!-- CONTENT 2 -->
-    <div class="content-two">
-
-    </div>
-
-    <!-- CONTENT 3 -->
-    <div class="content-three">
-
-    </div>
-
+        </section>
+    </main>
     <!-- FOOTER -->
-    <div class="footer">
-        
-    </div>
+    <footer>
+        <p>Copyright &copy; The Odin Project 2024</p>
+    </footer>
 
 </body>
 </html>
