Edit index.html and add pages directory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     <header>
         <div class="header-one">
-            <h3 class="header-logo"> Header Logo/h3>
+            <h3 class="header-logo"> Header Logo</h3>
             <ul class="header-links">
                 <li><a href="">Header Link One</a></li>
                 <li><a href="">Header Link One</a></li>
@@ -20,7 +20,7 @@
         <div class="header-two">
             <div class="header-content1">
                 <h2>This website is awesome</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi officia sed aspernatur blanditiis aliquid amet recusandae ipsum accusamus dignissimos maiores.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
                 <button>Sign up</button>
             </div>
             <div class="header-content2">
@@ -34,19 +34,19 @@
         <section class="section-one">
             <h2>Some random</h2>
             <div class="containers">
-                <div class="container1">
+                <div class="container-block">
                     <div class="block"></div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
-                <div class="container2">
+                <div class="container-block">
                     <div class="block"></div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
-                <div class="container3">
+                <div class="container-block">
                     <div class="block"></div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
-                <div class="container4">
+                <div class="container-block">
                     <div class="block"></div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
@@ -55,8 +55,8 @@
 
         <!-- CONTENT 2 -->
         <section class="section-two">
-            <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquid, non, molestiae perferendis quas nemo, placeat eius maiores quibusdam doloremque veniam facilis officia consequatur beatae earum minus quidem explicabo officiis.</p>
-            <p class="author"></p>
+                <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquid, non, molestiae perferendis quas nemo, placeat eius maiores</p>
+                <p class="author">-Someone</p>
         </section>
 
         <!-- CONTENT 3 -->
