Add new information to index.html and edit style.css
New information is related to the business only on the header and fix the style of style.css

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <!-- HEADER -->
     <header>
         <div class="header-one">
-            <h3 class="header-logo"> Header Logo</h3>
+            <h3 class="header-logo"> El Pozo</h3>
             <ul class="header-links">
-                <li><a href="">Header Link One</a></li>
-                <li><a href="">Header Link One</a></li>
-                <li><a href="">Header Link One</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Menu</a></li>
             </ul>
         </div>
         <div class="header-two">
             <div class="header-content1">
-                <h2>This website is awesome</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-                <button>Sign up</button>
+                <h2>Welcome to El Pozo restaurant</h2>
+                <p>A culinary experience in which you will travel the world through our food. </p>
+                <button>Know more</button>
             </div>
             <div class="header-content2">
-                <div class="dm-block">Block instead of img</div>
+                <img src="./img/restaurant.jpg" alt="Plates of food" width="200px">
             </div>
         </div>
     </header>
