Edit index.html and style.css
Add content on the main section and change the style

--- a/index.html
+++ b/index.html
@@ -32,22 +32,34 @@
     <main>
         <!-- CONTENT 1 -->
         <section class="section-one">
-            <h2>Some random</h2>
+            <h2>Our food is mainly inspired from countries like: </h2>
             <div class="containers">
                 <div class="container-block">
-                    <div class="block"></div>
+                    <div class="img-block">
+                    <img src="./img/mexican.jpg" width="120px" alt="Mexico flag">
+                    </div>
+                    <p>Mexico</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
                 <div class="container-block">
-                    <div class="block"></div>
+                    <div class="img-block">
+                        <img src="./img/italian.jpg" alt="Italy flag" width="120px">
+                    </div>
+                    <p>Italy</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
                 <div class="container-block">
-                    <div class="block"></div>
+                    <div class="img-block">
+                        <img src="./img/india.jpg" width="120px" alt="Indian food">
+                    </div>
+                    <p>India</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
                 <div class="container-block">
-                    <div class="block"></div>
+                    <div class="img-block">
+                        <img src="./img/chinese.jpg" width="120px" alt="Chinese food">
+                    </div>
+                    <p>China</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, odit!</p>
                 </div>
             </div>
@@ -55,19 +67,19 @@
 
         <!-- CONTENT 2 -->
         <section class="section-two">
-                <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquid, non, molestiae perferendis quas nemo, placeat eius maiores</p>
-                <p class="author">-Someone</p>
+                <p class="quote">All the experience you need is here, full of flavor, you will embark on a journey through the world. One of the best experiences of 2024.</p>
+                <p class="author">-Jan</p>
         </section>
 
         <!-- CONTENT 3 -->
         <section class="section-three">
             <div class="bottom-container">
                 <div class="bt-container1">
-                    <h3>Call to action It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there</p>
+                    <h3>Obtain your reservation</h3>
+                    <p>Click here to reserve a table</p>
                 </div>
                 <div class="bt-container2">
-                    <button>Sign up</button>
+                    <button>Reservation</button>
                 </div>
             </div>
 
