--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El Pozo</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -12,9 +12,9 @@
         <div class="header-one">
             <h3 class="header-logo"> El Pozo</h3>
             <ul class="header-links">
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Menu</a></li>
+                <li><a href="./pages/about.html">About</a></li>
+                <li><a href="./pages/contact.html">Contact</a></li>
+                <li><a href="./pages/menu.html">Menu</a></li>
             </ul>
         </div>
         <div class="header-two">
