Edit about.html and contact.html and styles.css
Pages have new content and style

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    
+    <body class="contact-body">
+        <header class="menu-header">
+            <a href="../index.html">Home</a>
+        </header>
+        <main class="about-main about-container">
+                    <div class="about-title" > 
+                        <h2>About Us</h2>
+                    </div>
+                    <div class="about-content">
+                        <div class="about-block">
+                            <h3>A Brief History</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, beatae adipisci? Praesentium eveniet assumenda et rerum accusantium cum possimus aperiam, modi amet magnam facere pariatur corporis animi accusamus natus ipsa!</p>
+                        </div>
+
+                        <div class="about-block">
+                            <h3>Our journey around the world</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, beatae adipisci? Praesentium eveniet assumenda et rerum accusantium cum possimus aperiam, modi amet magnam facere pariatur corporis animi accusamus natus ipsa!</p>
+                        </div>
+
+                        <div class="about-block">
+                            <h3>Our mission</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, beatae adipisci? Praesentium eveniet assumenda et rerum accusantium cum possimus aperiam, modi amet magnam facere pariatur corporis animi accusamus natus ipsa!</p>
+                        </div>
+
+                        <div class="about-block">
+                            <h3>Our vision</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, beatae adipisci? Praesentium eveniet assumenda et rerum accusantium cum possimus aperiam, modi amet magnam facere pariatur corporis animi accusamus natus ipsa!</p>
+                        </div>
+
+                    </div>
+
+            </div>
+        </main>   
 </body>
 </html>
