--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,8 +6,44 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-
-    
+<body class="contact-body">
+    <header class="menu-header">
+        <a href="../index.html">Home</a>
+    </header>
+    <main class="contact-main">
+        <div class="contact-container">
+            <div class="contact-title contact-block">
+                <h1>Contact Us</h1>
+            </div>
+            <div class="contact-numbers contact-block">
+                <div class="cont-number">
+                    <h3>Numbers: </h3>
+                    <p>+1 1234567891</p>
+                    <p>+1 998877665</p>
+                    <p>+1 121234567</p>
+                </div>
+                <div class="cont-attention">
+                    <h3>Attention Schedule</h3>
+                    <p><strong>Monday:</strong> 10am - 6pm</p>
+                    <p><strong>Tuesday - Saturday:</strong> 10am - 4pm</p>
+                    <p><strong>Sunday:</strong> Closed</p>
+                </div>
+            </div>
+            <div class="contact-locations contact-block">
+                <div class="cont-block">
+                    <h3>USA</h3>
+                    <p>Apt. 333 12345 Apple Street</p>
+                </div>
+                <div class="cont-block">
+                    <h3>Chile</h3>
+                    <p>Calle Los Lobos 567, El Roble</p>
+                </div>
+                <div class="cont-block">
+                    <h3>Peru</h3>
+                    <p>Jiron Caobas 112, San Bartolo</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
